fix(travis): run jobs on lts/*

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ jobs:
 
     - stage: lint ✨
       script: npm run lint
+      node_js: lts/*
 
-    - stage: release
+    - stage: release 🎉
       script: npm run semantic-release
+      node_js: lts/*
