--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,18 @@ jobs:
       - name: Lint ✨
         run: npm run lint
 
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
+      - name: Build ⚒️
+        run: npm run build
+
   Release:
-    needs: [Test, Coverage, Lint]
+    needs: [Test, Coverage, Lint, Build]
     if: |
       github.ref == 'refs/heads/master' &&
       github.event.repository.fork == false
@@ -60,6 +70,8 @@ jobs:
           node-version: 'lts/*'
       - name: Install Dependencies
         run: npm ci
+      - name: Build ⚒️
+        run: npm run build
       - name: Release 🎉
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
