--- a/package.json
+++ b/package.json
@@ -2,11 +2,26 @@
   "name": "emel",
   "version": "2.5.1",
   "description": "Create DOM elements with Emmet",
-  "main": "src/emel.js",
+  "main": "./dist/emel.cjs",
+  "module": "./src/emel.js",
+  "browser": "./dist/emel.umd.js",
+  "type": "module",
+  "files": [
+    "dist/",
+    "src/"
+  ],
+  "exports": {
+    ".": {
+      "import": "./src/emel.js",
+      "require": "./dist/emel.cjs"
+    }
+  },
   "scripts": {
-    "test": "jest --verbose",
-    "test:cover": "jest --coverage",
-    "lint": "eslint ."
+    "test": "npm run build && cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose",
+    "test:cover": "npm run build && cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "lint": "eslint .",
+    "format": "eslint . --fix",
+    "build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,18 +39,21 @@
   },
   "homepage": "https://github.com/UziTech/emel#readme",
   "dependencies": {
-    "@emmetio/abbreviation": "^2.2.3"
+    "@emmetio/abbreviation": "^2.3.3"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.7",
     "@semantic-release/npm": "^10.0.3",
     "@semantic-release/release-notes-generator": "^11.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.40.0",
     "jest-cli": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "rollup": "^3.21.6",
     "semantic-release": "^21.0.2"
   },
   "release": {
