--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test": "npm run build && cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose",
     "test:cover": "npm run build && cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "test:types": "tsd -t src/emel.d.ts -f spec/emel.test-d.ts",
-    "lint": "eslint .",
-    "format": "eslint . --fix",
+    "lint": "eslint",
+    "format": "eslint --fix",
     "build": "rollup -c rollup.config.js"
   },
   "repository": {
@@ -44,6 +44,7 @@
     "@emmetio/abbreviation": "^2.3.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^12.0.0",
@@ -52,7 +53,8 @@
     "@semantic-release/npm": "^12.0.0",
     "@semantic-release/release-notes-generator": "^13.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "rollup": "^4.14.0",
